# craiyon-discord

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  activate_env.sh  docker-compose.yml
.github/workflows/: build_release.yml  docker-publish.yml  docker_image.yml
src/: craiyon.rs  custom.rs  database.rs  image_formatter.rs  main.rs
src/commands/: ai.rs  change_prefix.rs  mod.rs  test.rs
