[package]
name = "craiyon-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = "0.11.2"
serde_json = "1.0"
serde = "1.0"
reqwest = "0.11"
base64 = "0.13" #0.20.0-alpha
image = "0.24"
log = "0.4"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
